2014-09-08  Dan Bernstein  <mitz@apple.com>

        iOS Simulator build fix.

        * Misc/WebKitSystemBits.m:
        (WebMemorySize):

2014-09-07  Darin Adler  <darin@apple.com>

        Fix build failure seen on Mountain Lion buildbot.

        * Misc/WebNSDataExtras.h: Make WEB_GUESS_MIME_TYPE_PEEK_LENGTH an unsigned instead
        of an int, to avoid warning about mixing signs.

2014-09-06  Darin Adler  <darin@apple.com>

        Make updates suggested by new version of Xcode
        https://bugs.webkit.org/show_bug.cgi?id=136603

        Reviewed by Mark Rowe.

        * Configurations/Base.xcconfig: Added CLANG_WARN_UNREACHABLE_CODE, COMBINE_HIDPI_IMAGES,
        and ENABLE_STRICT_OBJC_MSGSEND as suggested by Xcode upgrade check.

        * History/WebURLsWithTitles.m:
        (+[WebURLsWithTitles writeURLs:andTitles:toPasteboard:]): Use NSUInteger instead of
        unsigned for correctness, and to quiet the 32-to-64-bit compiler warning (which is
        not turned on because it gives us too many false positives).
        * Misc/WebElementDictionary.mm:
        (-[WebElementDictionary objectForKey:]): Ditto.
        * Misc/WebNSDataExtras.m:
        (-[NSData _webkit_guessedMIMETypeForXML]): Ditto.
        (-[NSData _webkit_guessedMIMEType]): Ditto.
        (-[NSData _webkit_parseRFC822HeaderFields]): Ditto.
        (-[NSData _web_locationAfterFirstBlankLine]): Ditto.

        * Misc/WebNSURLExtras.h: Removed unused _web_URLWithLowercasedScheme, _web_hostData,
        _webkit_URLByRemovingFragment, _webkit_URLByRemovingResourceSpecifier, _webkit_isFTPDirectoryURL,
        _webkit_shouldLoadAsEmptyDocument, _web_hostNameNeedsDecodingWithRange:,
        _web_hostNameNeedsEncodingWithRange:, _web_decodeHostNameWithRange:, _web_encodeHostNameWithRange:,
        and _webkit_URLFragment methods.

        * Misc/WebNSURLExtras.mm:
        (-[NSURL _web_URLByTruncatingOneCharacterBeforeComponent:]): Deleted.