@@ -53,6 +53,7 @@
 - (BOOL)_web_isEmpty;
 
 - (NSURL *)_webkit_canonicalize;
+- (NSURL *)_webkit_URLByRemovingFragment;
 - (NSURL *)_web_URLByRemovingUserInfo;
 
 - (BOOL)_webkit_isJavaScriptURL;
